fixed tests after update to spring 2.1.5, replaced new long with long.valueof